[gd_scene format=3 uid="uid://duqfgmk3q5eug"]

[ext_resource type="Script" uid="uid://b5e3244vsgv42" path="res://enemy/enemy.gd" id="1_2mvqj"]
[ext_resource type="PackedScene" uid="uid://6muuir2bfjfl" path="res://enemy/mask/mask.tscn" id="2_ofsxj"]
[ext_resource type="PackedScene" uid="uid://dnoouc5e0reku" path="res://enemy/Monster/MaskMonster.glb" id="2_ppra6"]
[ext_resource type="Material" uid="uid://dskfylrfkwc85" path="res://enemy/Monster/MonsterShaderMat.tres" id="3_p200p"]
[ext_resource type="PackedScene" uid="uid://c2uyy0xk8nlst" path="res://ParticleEffects/Smoke/EnemySmoke.tscn" id="5_pmsee"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_scxef"]
radius = 0.29296875

[sub_resource type="BoxMesh" id="BoxMesh_ofsxj"]

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_p200p"]
animation = &"Die"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_pmsee"]
animation = &"Idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_1wwld"]
animation = &"Spawn"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_y5vj3"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_5ffra"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_e355f"]
xfade_time = 0.2
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_78jik"]
xfade_time = 0.2
advance_mode = 2
advance_condition = &"is_dead"

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_o3pv7"]
states/Die/node = SubResource("AnimationNodeAnimation_p200p")
states/Die/position = Vector2(671, 33.079998)
states/Idle/node = SubResource("AnimationNodeAnimation_pmsee")
states/Idle/position = Vector2(528.6, 33.032646)
states/Spawn/node = SubResource("AnimationNodeAnimation_1wwld")
states/Spawn/position = Vector2(391.6, 33.413635)
states/Start/position = Vector2(196, 83.99999)
transitions = ["Start", "Spawn", SubResource("AnimationNodeStateMachineTransition_y5vj3"), "Die", "End", SubResource("AnimationNodeStateMachineTransition_5ffra"), "Spawn", "Idle", SubResource("AnimationNodeStateMachineTransition_e355f"), "Idle", "Die", SubResource("AnimationNodeStateMachineTransition_78jik")]
graph_offset = Vector2(125, -25)

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_xoplw"]
graph_offset = Vector2(-219.97156, 51.127052)
nodes/StateMachine/node = SubResource("AnimationNodeStateMachine_o3pv7")
nodes/StateMachine/position = Vector2(-48, 144)
node_connections = [&"output", 0, &"StateMachine"]

[node name="Enemy" type="CharacterBody3D" unique_id=2005698740]
script = ExtResource("1_2mvqj")

[node name="CollisionShape3D" type="CollisionShape3D" parent="." unique_id=309718217]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.18661314, 0)
shape = SubResource("CapsuleShape3D_scxef")
disabled = true

[node name="EnemyMesh" parent="." unique_id=1169895927 instance=ExtResource("2_ppra6")]
unique_name_in_owner = true
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, -0.52551943, 0)

[node name="MaskMonster" parent="EnemyMesh/rig/Skeleton3D" parent_id_path=PackedInt32Array(1169895927, 298564037) index="0" unique_id=720920421]
material_override = ExtResource("3_p200p")

[node name="MaskSocket1" type="BoneAttachment3D" parent="EnemyMesh/rig/Skeleton3D" parent_id_path=PackedInt32Array(1169895927, 298564037) index="1" unique_id=1398618424]
transform = Transform3D(-0.70744175, -0.6577664, 0.2585915, 0.49071783, -0.19381276, 0.84948957, -0.50864744, 0.7278599, 0.4598888, 1.3851335e-09, 2.9762833, 0.006909771)
bone_name = "MaskBone.UpperSpine.R"
bone_idx = 117

[node name="Mask1" parent="EnemyMesh/rig/Skeleton3D/MaskSocket1" unique_id=1702853835 instance=ExtResource("2_ofsxj")]
unique_name_in_owner = true
transform = Transform3D(0.33718896, 0.47159114, 0.1546137, -0.23539937, -0.012583264, 0.5517507, 0.43691048, -0.37073365, 0.17794888, 0.3053214, 0.35337073, 0.26110804)

[node name="MaskSocket2" type="BoneAttachment3D" parent="EnemyMesh/rig/Skeleton3D" parent_id_path=PackedInt32Array(1169895927, 298564037) index="2" unique_id=1825298830]
transform = Transform3D(-0.36560884, 0.5800026, -0.7279609, -0.6059857, 0.44531122, 0.65914994, 0.7064779, 0.6821251, 0.1886636, 0.45811725, 2.8324122, -0.017699867)
bone_name = "MaskBone.Shoulder.L"
bone_idx = 109

[node name="Mask2" parent="EnemyMesh/rig/Skeleton3D/MaskSocket2" unique_id=1500641921 instance=ExtResource("2_ofsxj")]
unique_name_in_owner = true
transform = Transform3D(0.33718896, 0.47159114, 0.1546137, -0.23539937, -0.012583264, 0.5517507, 0.43691048, -0.37073365, 0.17794888, 0.3053214, 0.35337073, 0.26110804)

[node name="MaskSocket3" type="BoneAttachment3D" parent="EnemyMesh/rig/Skeleton3D" parent_id_path=PackedInt32Array(1169895927, 298564037) index="3" unique_id=788118794]
transform = Transform3D(0.3073303, -0.72284997, 0.6188989, 0.76151603, -0.20319298, -0.61547196, 0.5706498, 0.6604548, 0.48801443, 1.3851379e-09, 1.9278834, 0.035886668)
bone_name = "MaskBone.LowLowSpine.R"
bone_idx = 26

[node name="Mask3" parent="EnemyMesh/rig/Skeleton3D/MaskSocket3" unique_id=1870763949 instance=ExtResource("2_ofsxj")]
unique_name_in_owner = true
transform = Transform3D(0.33718896, 0.47159114, 0.1546137, -0.23539937, -0.012583264, 0.5517507, 0.43691048, -0.37073365, 0.17794888, 0.3053214, 0.35337073, 0.26110804)

[node name="MaskSocket4" type="BoneAttachment3D" parent="EnemyMesh/rig/Skeleton3D" parent_id_path=PackedInt32Array(1169895927, 298564037) index="4" unique_id=1310851106]
transform = Transform3D(0.04401651, -0.6386755, 0.7682162, 0.99381787, -0.05045949, -0.09889356, 0.10192472, 0.7678199, 0.63250613, 1.385132e-09, 2.2496564, 0.025502104)
bone_name = "MaskBone.LowSpine.R"
bone_idx = 33

[node name="Mask4" parent="EnemyMesh/rig/Skeleton3D/MaskSocket4" unique_id=1746759714 instance=ExtResource("2_ofsxj")]
unique_name_in_owner = true
transform = Transform3D(0.33718896, 0.47159114, 0.1546137, -0.23539937, -0.012583264, 0.5517507, 0.43691048, -0.37073365, 0.17794888, 0.3053214, 0.35337073, 0.26110804)

[node name="EmotionMessage" type="Label3D" parent="." unique_id=1178853147]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.60851, 0)
visible = false
no_depth_test = true
render_priority = 1
text = "HI THERE FRIEND"
autowrap_mode = 1
width = 1000.0

[node name="PersonMesh" type="MeshInstance3D" parent="." unique_id=793638429]
visible = false
mesh = SubResource("BoxMesh_ofsxj")

[node name="AnimationTree" type="AnimationTree" parent="." unique_id=990397872]
unique_name_in_owner = true
root_node = NodePath("%EnemyMesh")
tree_root = SubResource("AnimationNodeBlendTree_xoplw")
anim_player = NodePath("../EnemyMesh/AnimationPlayer")
parameters/StateMachine/conditions/is_dead = false

[node name="EnemySmoke" parent="." unique_id=1375066680 instance=ExtResource("5_pmsee")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 0)

[editable path="EnemyMesh"]
